# openccb

./: .dockerignore  .env.dev  .env.dev.example  .env.example  .gitignore  CONFIGURACION_RED.md  Cargo.toml  DESPLIEGUE.md  GUIA_RAPIDA.txt  KIT_MANUAL_USUARIO.md  ManualDeConfiguracion.md  Manual_Usuario_OpenCCB_Studio.docx  Manual_Usuario_OpenCCB_Studio_con_fotos.docx  Manual_Usuario_OpenCCB_Studio_con_fotos_actualizado.docx  QWEN.md  README.md  README_MANUAL.md  RESUMEN_MANUAL.txt  add_screenshots_to_manual.py  check_db.js  clear_session.sh  db-mgmt.sh  deploy.sh  diagnose_auth.sh  docker-compose.local.yml  docker-compose.yml  generate_manual.py  init-system.sh  install.sh  logs.txt  package-lock.json  reset_db.sh  roadmap.md  test_query.js  validate_auth.sh
services/cms-service/: Cargo.toml  Dockerfile  cms_check.txt
services/cms-service/.sqlx/: query-00e1fd1111ece41c0c1494cf92dacaa1127f01bf97ddf71342cf129c3a3275e1.json  query-13d9a1d22c6a77705cd74ed6d05916d9f84c28b87cb357178400ee7421cbe0bc.json  query-17b6ee6e225ecf0573f41c8017f7509bf38d345a697b9b885ec276061baa1cba.json  query-255e2331ed0f3148bd14e1cc2e791c7c91067eea455146923e463036d61e92c7.json  query-2893eec86b904d90f69b96766029f17c80aa86fd3a10d12bef9879b9f25ae23a.json  query-2abb997f1ef644429883fbd0bd72408bddaa1cea968319f28d5e87011e2bf0b7.json  query-3747c2088f23d32d110971afcdf8271678069e981fa98749ff7ec26c358a139f.json  query-42dfabb9428c4d090242fc98e43eb3a8236333ca2305b6ab852dcc90d232ac89.json  query-45c3ae8b43e4fe46aa4126986b7607996f77213b859e4f47e0a1d16cf4913fd0.json  query-4687bb156a947f156e401c0d610756e7bb3a1abb0f706d3be347659f485e71de.json  query-4e61a89bc2207eba7452c77aea850919ec09dfabd2b8e5b5dd84aca3853669eb.json  query-521e61afe4ab4bf06305447d012ee4bc236f2b3ebce7c788335cf0ca2daf8823.json  query-62c035c29d3b3c5a2fff84713668f6d8a2f6e2cbabf55a6795b218338239d8ab.json  query-71a9bb3c9b3ba2c851c2dad049291bb46855eca27523952bbf655250039a7468.json  query-7b3e62330c2b8c283aff253e568b65655efd76d54a5e6ac57093a05718af9882.json  query-82e4c85bf3aaa45506e3245c3d7b9e8ab224a8e10f2666e69ef212fb0c000ac0.json  query-85fbeda23c72b58439fdedac4c6dbf23b9054354f737f60c23d0b416944b6095.json  query-8ce98992129f77432d24a5a8a458c52d3a252c10f41d6be67d8696b046e4c18f.json  query-914bcec73c3c1399f4e743d3e89289e783b7479592d1c7e11dd677c99d9bb2d3.json  query-95ddcf80ff28b2680ebdd9d8ba92aefa34fd99209e228238d86e7d135f6b41e2.json  query-b42eb00367a1991125ff01fab2a51a3582512a9265d02c2bcb05ddb80e7c6038.json  query-c2a37e2b0139c053b4c4eb88a2cf4b658fbf419795901d565eaaa1e169d881e9.json  query-cc7467f5734e57f581fab98e7e37a934a7852474ed2eb3ea7b26e4d14b8a4df0.json  query-d06f83e2b566ac9a49c63bdfcce03912f6ae1ef00a96fd345d89f22f218aaf1c.json  query-ddc1f59ea8f744d2357944e68cf49e4176f7dbee191bbdff8876fc88a0e26436.json  query-e26e27402806a7fa4d85433ed18f25c84a2cc2f5eb6b9c2db7562f75755ddc13.json  query-e3065bc94b895c8ced3d16c97bd6a11909ee9d29a2dc30a70123d07b28d12c11.json  query-e3b659588c9e818f6c89d030ae929280aaee5c922c1f01420dc061336cb1c159.json  query-e57d5797051a54d5ad707edeabfad84a6da8d8d7020f049d67c98687e6961194.json  query-e5ede144c8250e31ce63979c3f1a835eb7e8377cf75c8dc0679ec5c2f9504e98.json  query-ed4f770f0bd31dc8dc731e73843d8c71a2462290c837d72e1def2af3f7a5fc48.json  query-f531c2478ba9634cf935aa615c9320fb99006f6e5e66501a93520af637f8f1a5.json  query-f7a592c933c658314ed5228da68f5df87fbfbbb4acda6940b1fe57009517a6b7.json
services/cms-service/migrations/: 20231219000000_initial_schema.sql  20231219000001_lesson_metadata.sql  20231219000002_assets_table.sql  20231219000003_users_table.sql  20231221000001_grading_system.sql  20231222000001_lesson_attempts.sql  20231222000002_add_roles.sql  20231222000003_add_passing_percentage.sql  20231229000001_add_organization_branding.sql  20250116100000_add_multi_tenancy.sql  20251226000000_add_lesson_summary.sql  20251226000000_multi_tenancy.sql  20251230000001_course_pacing_and_dates.sql  20251230000002_add_organization_domain.sql  20260111000000_gamification_users.sql  20260111000001_webhooks.sql  20260111000002_advanced_auditing.sql  20260111000005_crud_functions.sql  20260111000006_add_org_to_content_tables.sql  20260111000007_fix_audit_logs_constraint.sql  20260111000008_fix_content_schema_final.sql  20260111000009_seed_tutorials.sql  20260115000002_make_audit_user_nullable.sql  20260115000003_add_transcription_status.sql  20260116000010_update_fn_register_user.sql  20260116000011_add_delete_functions.sql  20260117000100_add_sso_config.sql  20260117000200_add_course_id_to_assets.sql  20260121000000_add_api_key_to_orgs.sql  20260123000000_add_branding_fields.sql  20260215000000_monetization.sql  20260217000001_advanced_grading.sql  20260218000001_lesson_dependencies.sql  20260219000001_course_teams.sql  20260223000000_add_lesson_preview.sql  20260223150000_update_assets_table.sql  20260226000001_add_logo_variant.sql  20260304000001_update_course_status_support.sql  20260413000001_organization_exercise_settings.sql  20260414000001_add_certificate_toggle.sql  (+12 more)
services/cms-service/scripts/: video_bridge.py
services/cms-service/src/: db_util.rs  exporter.rs  external_handlers.rs  handlers.rs  handlers_admin.rs  handlers_assets.rs  handlers_branding.rs  handlers_email_settings.rs  main.rs  (+14 more)
services/lms-service/: .dockerignore  Cargo.toml  Dockerfile  build_errors.txt  lti_errors.txt
shared/common/: Cargo.toml
(+310 files in other folders)
