[package]
name = "cms-service"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
common = { path = "../../shared/common" }
axum.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
chrono.workspace = true
uuid.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dotenvy.workspace = true
tower-http.workspace = true
reqwest.workspace = true
bcrypt.workspace = true
jsonwebtoken.workspace = true
hmac.workspace = true
sha2.workspace = true
hex.workspace = true
openidconnect.workspace = true
