[package]
name = "lms-service"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
common = { path = "../../shared/common" }
axum.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
chrono.workspace = true
uuid.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dotenvy.workspace = true
tower-http.workspace = true
tower_governor.workspace = true
bcrypt.workspace = true
jsonwebtoken.workspace = true
reqwest.workspace = true
urlencoding = "2.1"
base64 = "0.22"
utoipa.workspace = true
thiserror.workspace = true
http.workspace = true
mime_guess = "2.0"
aws-config = "1"
aws-sdk-s3 = "1"
sha2.workspace = true
hmac.workspace = true
hex.workspace = true
tokio-stream = "0.1"
lettre = { version = "0.11", default-features = false, features = ["builder", "smtp-transport", "tokio1", "tokio1-native-tls"] }
rand = "0.8"
