[package]
name = "common"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
axum = { workspace = true, features = ["macros"] }
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
chrono.workspace = true
uuid.workspace = true
jsonwebtoken.workspace = true
bcrypt.workspace = true
reqwest = { workspace = true, features = ["json"] }
hmac.workspace = true
sha2.workspace = true
hex.workspace = true
tracing.workspace = true
